--- a/nas garras da patrulha/index.css
+++ b/nas garras da patrulha/index.css
@@ -30,26 +30,34 @@ video {
 }
 
 /* Estilos para a lista no rodapé */
+/* Estilos para itens de lista no rodapé */
 #footer ul {
-    list-style: none;
+    list-style-type: none;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin: 10px;
+    position: fixed;
+    bottom: 50px; /* Ajuste conforme necessário */
+    left: 51%; /* Ajuste conforme necessário */
+    transform: translateX(-50%); /* Centraliza horizontalmente */
 }
 
-/* Estilos para as imagens no rodapé */
-#footer img {
-    height: 50px; /* Altura desejada para as imagens */
-    margin-left: 20px; /* Adiciona margem à esquerda da imagem */
-    margin-right: 30px; /* Adiciona margem à direita da imagem */
-    margin-bottom: -220px; /* Ajusta a posição vertical da imagem */
+#footer ul li {
+    display: inline;
+    margin-right: 10px;
 }
+
+#footer ul li a {
+    
+    font-size: 40px; /* Tamanho dos ícones */
+    line-height: 50px; /* Altura dos ícones */
+}
+
+
+
+
 
 /* Estilos para parágrafos no rodapé */
 #footer p {
+    font-family: Arial;
     position: fixed;
     bottom: 0;
     height: 150px;
@@ -59,6 +67,7 @@ video {
 
 /* Estilos para o segundo parágrafo no rodapé */
 #footer p:last-child {
+    font-family: Arial;
     position: fixed;
     bottom: 0;
     height: 50px;
